# NERDSS_upgrade

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  Makefile
.github/: pull_request_template.md
.github/workflows/: ci.yml
EXEs/: nerdss.cpp
benchmarks/: benchmark_manifest.json  run_benchmarks.py
docs/: refactor_implementation_plan.md
docs/upgrade/: architecture_map.md  benchmark_baseline.md  contributor_guidance.md  decision_log.md  error_model.md  input_formats.md  main_loop_extraction_plan.md  output_formats.md  profile_report.md  sanitizers_static_analysis.md  smoke_tests.md  static_analysis_backlog.md  style_tooling.md  unit_tests.md  validation_log.md
include/classes/: class_Parameters.hpp
include/error/: error_codes.hpp
include/io/: io.hpp
python_scripts/: inspect_nerdss_run_manifest.py
schemas/: nerdss-input.schema.json  nerdss-run-manifest.schema.json
src/classes/: class_Parameters.cpp
src/io/: read_restart.cpp
tests/regression/: README.md  manifest.json  run_regression.py
tests/unit/: test_vector_coord.cpp
tools/: format_changed_files.sh  legacy_input_to_json.py  profile_commands.sh  run_sanitizer_builds.sh  run_smoke_tests.py  run_static_analysis.sh
